finished with routes and tests
